maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:25: error: too many arguments for method aMurSud: ()Boolean
  if (!aMurSud(x,y)){setIndication(x,y+1,cpt)}
              ^JediEscaper:26: error: too many arguments for method aMurEst: ()Boolean
  if (!aMurEst(x,y)){setIndication(x+1,y,cpt)}
              ^